@@ -9,6 +9,8 @@ Changes in 0.50.1:
   * Added automatic :perl component that works like the :python component,
     and extended the multilib-friendly-or-architecture-neutral policy to
     work with perl as well as python.
+  * client/server protocol negotiation is a whole lot smarter now
+  * getChangeSet() results in a single URL rather than one per primary trove
 
 Changes in 0.50.0:
   * Redirections work
